Add Favicon and update Readme

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>League Of Legends</title>
+	<title>League of Legends</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
 	<link rel="stylesheet" href="css/styles.css" />
+	<link rel="shortcut icon"
+		href="https://cmsassets.rgpub.io/sanity/images/dsfx7636/news_live/d3b7bd9decb1e1672dcb80be4f8bc1aa05490dc1-110x70.svg"
+		type="image/x-icon">
 </head>
 
 <body>
